# BBLP

./: .gitignore  .gitmodules  README.md
Design/: breadboard.blend  breadboard.blend1  mainboard.blend  mainboard.blend1  oled spaces.blend  oled_spaces.stl  print_bottom.stl  print_top.stl  print_tray.stl  subboard.blend  subboard.blend1
Schematics/IOBoard/: IOBoard.kicad_pcb  IOBoard.kicad_prl  IOBoard.kicad_pro  IOBoard.kicad_sch  erc.rpt
Schematics/MainBoard/: IOBoardConnectors.kicad_sch  MainBoard.kicad_pcb  MainBoard.kicad_prl  MainBoard.kicad_pro  MainBoard.kicad_sch  fp-lib-table  powerArray.kicad_sch  sym-lib-table
Schematics/Mainboard/: Custom.kicad_sym  DRC.rpt  ERC.rpt  Mainboard.kicad_pcb  Mainboard.kicad_prl  Mainboard.kicad_pro  Mainboard.kicad_sch  Power management.kicad_sch  Power rails.kicad_sch  USB-TTL.kicad_sch  User interface.kicad_sch  fp-lib-table  parts.kicad_sch  report.txt
Schematics/Programmer/: Programmer.kicad_pcb  Programmer.kicad_prl  Programmer.kicad_pro  Programmer.kicad_sch
Schematics/Simulation/: LM1117_N_2P85_TRANS.LIB  Power.tdr  Power.tsc  SS24T3.REV0.SP3  power_switch.tsc
Schematics/SubCircuits/: Custom.kicad_sym  DRC.rpt  ERC.rpt  SubCircuits.csv  SubCircuits.kicad_pcb  SubCircuits.kicad_prl  SubCircuits.kicad_pro  SubCircuits.kicad_sch  charger.kicad_sch  i2c_mux.kicad_sch  led_boost.kicad_sch  power.kicad_sch  rotary_encoder.kicad_sch  stm32.kicad_sch  stm32_programmer.kicad_sch  sym-lib-table
Software/: client-server.uxf
Software/Server/: .gitignore  pyproject.toml  questions.json  server.go  server.py
(+229 files in other folders)
