[tool.poetry]
name = "server"
version = "0.1.0"
description = "Example server for demo board"
authors = ["Alex Carter <acarter010204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
